fix line spacing in diplo

--- a/app/assets/stylesheets/tl-viewer/diplomatic-panel.scss
+++ b/app/assets/stylesheets/tl-viewer/diplomatic-panel.scss
@@ -1,6 +1,5 @@
 #diplomatic-panel {
   width: 490px;
-  line-height: 3.2em;
   padding: 30px;
   background: #fdedcc;
 }
