--- a/app/assets/stylesheets/tl-viewer/leaf-viewer.scss
+++ b/app/assets/stylesheets/tl-viewer/leaf-viewer.scss
@@ -2,7 +2,8 @@
   
   margin-top: 20px;
   margin-left: 20px;
-  
+  line-height: 3.2em;
+
   .leaf-pane {
     margin-top: 43px;
   }
